--- a/views/planets/edit.ejs
+++ b/views/planets/edit.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Page</title>
-</head>
+<%- include("../partials/head.ejs") %>
 <body>
     <h1>Edit Form </h1>
     <form action="/planets/<%=planet._id%>?_method=PUT" method="POST">
