--- a/views/planets/index.ejs
+++ b/views/planets/index.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Index</title>
-</head>
+<%- include("../partials/head.ejs") %>
 <body>
     <h1>All Planets </h1>
     <ul>
