--- a/views/planets/new.ejs
+++ b/views/planets/new.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a Planet</title>
-</head>
+<%- include("../partials/head.ejs") %>
 <body>
     <h1>Create a New Planet!</h1>
     <a href="/planets">Back to Planets</a>
