--- a/views/planets/show.ejs
+++ b/views/planets/show.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= planet.name %></title>
-</head>
+<%- include("../partials/head.ejs") %>
 <body>
     <h1><%= planet.name %></h1>
     <p><%= planet.description %> </p>
